--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,7 @@ android {
 }
 
 dependencies {
-//    implementation fileTree(dir: 'libs', include: ['*.aar'])
-    implementation 'com.cesarvaliente.random_string_generator:library:0.0.1'
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
