--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -46,6 +46,10 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
+      - env:
+          bintrayUser: ${{secrets.BINTRAY_USER}}
+          bintrayKey: ${{secrets.BINTRAY_KEY}}
+          bintrayOrg: ${{secrets.BINTRAY_ORG}}
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
@@ -54,14 +58,6 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: library 01 Bintray publish
-        env:
-          bintrayUser: ${{secrets.BINTRAY_USER}}
-          bintrayKey: ${{secrets.BINTRAY_KEY}}
-          bintrayOrg: ${{secrets.BINTRAY_ORG}}
         run: ./gradlew :library:bintrayUpload
       - name: library 02 Bintray publish
-        env:
-          bintrayUser: ${{secrets.BINTRAY_USER}}
-          bintrayKey: ${{secrets.BINTRAY_KEY}}
-          bintrayOrg: ${{secrets.BINTRAY_ORG}}
         run: ./gradlew :library-aaa:bintrayUpload
