--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -45,11 +45,11 @@ jobs:
     needs: build
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    env:
+      bintrayUser: ${{secrets.BINTRAY_USER}}
+      bintrayKey: ${{secrets.BINTRAY_KEY}}
+      bintrayOrg: ${{secrets.BINTRAY_ORG}}
     steps:
-      - env:
-          bintrayUser: ${{secrets.BINTRAY_USER}}
-          bintrayKey: ${{secrets.BINTRAY_KEY}}
-          bintrayOrg: ${{secrets.BINTRAY_ORG}}
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
