added condition to run the 2nd publication even when 1st publication (previous) failed

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -60,4 +60,5 @@ jobs:
       - name: library 01 Bintray publish
         run: ./gradlew :library:bintrayUpload
       - name: library 02 Bintray publish
+        if: ${{ always() }}
         run: ./gradlew :library-aaa:bintrayUpload
