--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -41,14 +41,10 @@ jobs:
         run: ./gradlew testDebugUnitTest
       - name: lint
         run: ./gradlew lintDebug
-  publish:
+  publish library 01:
     needs: build
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    env:
-      bintrayUser: ${{secrets.BINTRAY_USER}}
-      bintrayKey: ${{secrets.BINTRAY_KEY}}
-      bintrayOrg: ${{secrets.BINTRAY_ORG}}
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -58,7 +54,26 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: library 01 Bintray publish
+        env:
+          bintrayUser: ${{secrets.BINTRAY_USER}}
+          bintrayKey: ${{secrets.BINTRAY_KEY}}
+          bintrayOrg: ${{secrets.BINTRAY_ORG}}
         run: ./gradlew :library:bintrayUpload
+  publish library 02:
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: library 02 Bintray publish
-        if: ${{ always() }}
+        env:
+          bintrayUser: ${{secrets.BINTRAY_USER}}
+          bintrayKey: ${{secrets.BINTRAY_KEY}}
+          bintrayOrg: ${{secrets.BINTRAY_ORG}}
         run: ./gradlew :library-aaa:bintrayUpload
