--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,19 +1,19 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Build and publish
-# This workflow build and publish the different libraries the project has.
+name: publish
+# This workflow builds and publishes the different artifacts the project has..
 # Every library publication has its own job, so if one fails the other can run, and we can see them all
 # individually in Github Actions view.
 
 on:
-  pull_request:
-  push:
-    branches: [ main ]
+  create:
+    tags:
+      - '*'
   workflow_dispatch:
     inputs:
       name:
-        description: 'manual build trigger'
+        description: 'manual publish'
       home:
         description: 'location'
         required: false
