Added maven central publishing code so we can publish our library using a gradle task

--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,12 @@ task clean(type: Delete) {
 
 String getPropertyValue(String property) {
     def localPropertyFound = project.hasProperty(property)
+    def envProperty = System.getenv(property)
     if (localPropertyFound) {
         return project.getProperties().get(property)
+    } else if (envProperty != null) {
+        return envProperty
     } else {
-        return System.getenv(property)
+        return "NO_VALUE"
     }
 }
