--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,81 +1,81 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: publish
+name: publish-bintray
 # This workflow builds and publishes the different artifacts the project has..
 # Every library publication has its own job, so if one fails the other can run, and we can see them all
 # individually in Github Actions view.
 
-on:
-  push:
-    tags:
-      - '*'
-  workflow_dispatch:
-    inputs:
-      name:
-        description: 'manual publish'
-      home:
-        description: 'location'
-        required: false
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: clean
-        run: ./gradlew clean
-      - name: assemble debug
-        run: ./gradlew assembleDebug
-      - name: unit tests
-        run: ./gradlew testDebugUnitTest
-      - name: lint
-        run: ./gradlew lintDebug
-
-  publish-library-01:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: library 01 Bintray publish
-        env:
-          BINTRAY_USER: ${{secrets.BINTRAY_USER_TEST}}
-          BINTRAY_KEY: ${{secrets.BINTRAY_KEY_TEST}}
-          BINTRAY_ORG: ${{secrets.BINTRAY_ORG_TEST}}
-        run: ./gradlew :library:bintrayUpload
-
-  publish-library-02:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: library 02 Bintray publish
-        env:
-          BINTRAY_USER: ${{secrets.BINTRAY_USER_TEST}}
-          BINTRAY_KEY: ${{secrets.BINTRAY_KEY_TEST}}
-          BINTRAY_ORG: ${{secrets.BINTRAY_ORG_TEST}}
-        run: ./gradlew :library-aaa:bintrayUpload
+#on:
+#  push:
+#    tags:
+#      - '*'
+#  workflow_dispatch:
+#    inputs:
+#      name:
+#        description: 'manual publish'
+#      home:
+#        description: 'location'
+#        required: false
+#
+#jobs:
+#  build-bintray:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up JDK 1.8
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 1.8
+#      - name: Cache Gradle packages
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.gradle/caches
+#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+#          restore-keys: ${{ runner.os }}-gradle
+#      - name: Grant execute permission for gradlew
+#        run: chmod +x gradlew
+#      - name: clean
+#        run: ./gradlew clean
+#      - name: assemble debug
+#        run: ./gradlew assembleDebug
+#      - name: unit tests
+#        run: ./gradlew testDebugUnitTest
+#      - name: lint
+#        run: ./gradlew lintDebug
+#
+#  publish-library-01:
+#    needs: build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up JDK 1.8
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 1.8
+#      - name: Grant execute permission for gradlew
+#        run: chmod +x gradlew
+#      - name: library 01 Bintray publish
+#        env:
+#          BINTRAY_USER: ${{secrets.BINTRAY_USER_TEST}}
+#          BINTRAY_KEY: ${{secrets.BINTRAY_KEY_TEST}}
+#          BINTRAY_ORG: ${{secrets.BINTRAY_ORG_TEST}}
+#        run: ./gradlew :library:bintrayUpload
+#
+#  publish-library-02:
+#    needs: build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up JDK 1.8
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 1.8
+#      - name: Grant execute permission for gradlew
+#        run: chmod +x gradlew
+#      - name: library 02 Bintray publish
+#        env:
+#          BINTRAY_USER: ${{secrets.BINTRAY_USER_TEST}}
+#          BINTRAY_KEY: ${{secrets.BINTRAY_KEY_TEST}}
+#          BINTRAY_ORG: ${{secrets.BINTRAY_ORG_TEST}}
+#        run: ./gradlew :library-aaa:bintrayUpload
