--- a/.github/workflows/publish_mavencentral.yml
+++ b/.github/workflows/publish_mavencentral.yml
@@ -1,14 +1,15 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: publish
+name: publish-mavencentral
 # This workflow builds and publishes the different artifacts the project has..
 # Every library publication has its own job, so if one fails the other can run, and we can see them all
 # individually in Github Actions view.
 
 on:
-  release:
-    types: [published]
+  #  release:
+  #    types: [published]
+  pull_request:
   workflow_dispatch:
     inputs:
       name:
@@ -18,7 +19,7 @@ on:
         required: false
 
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
