--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,36 +7,36 @@ name: build
 # individually in Github Actions view.
 
 #on:
-#  pull_request:
-#  push:
-#    branches: [ main ]
-#  workflow_dispatch:
-#    inputs:
-#      name:
-#        description: 'manual build trigger'
-#      home:
-#        description: 'location'
-#        required: false
-#
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up JDK 1.8
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 1.8
-#      - name: Cache Gradle packages
-#        uses: actions/cache@v2
-#        with:
-#          path: ~/.gradle/caches
-#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-#          restore-keys: ${{ runner.os }}-gradle
-#      - name: Grant execute permission for gradlew
-#        run: chmod +x gradlew
-#      - name: clean
-#        run: ./gradlew clean
+  pull_request:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'manual build trigger'
+      home:
+        description: 'location'
+        required: false
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Cache Gradle packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: clean
+        run: ./gradlew clean
 #      - name: assemble debug
 #        run: ./gradlew assembleDebug
 #      - name: unit tests
