--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,37 +6,37 @@ name: publish-bintray
 # Every library publication has its own job, so if one fails the other can run, and we can see them all
 # individually in Github Actions view.
 
-#on:
-#  push:
-#    tags:
-#      - '*'
-#  workflow_dispatch:
-#    inputs:
-#      name:
-#        description: 'manual publish'
-#      home:
-#        description: 'location'
-#        required: false
-#
-#jobs:
-#  build-bintray:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up JDK 1.8
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 1.8
-#      - name: Cache Gradle packages
-#        uses: actions/cache@v2
-#        with:
-#          path: ~/.gradle/caches
-#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-#          restore-keys: ${{ runner.os }}-gradle
-#      - name: Grant execute permission for gradlew
-#        run: chmod +x gradlew
-#      - name: clean
-#        run: ./gradlew clean
+on:
+  push:
+    tags:
+      - '*'
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'manual publish'
+      home:
+        description: 'location'
+        required: false
+
+jobs:
+  build-bintray:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Cache Gradle packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: clean
+        run: ./gradlew clean
 #      - name: assemble debug
 #        run: ./gradlew assembleDebug
 #      - name: unit tests
