--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,45 +37,45 @@ jobs:
         run: chmod +x gradlew
       - name: clean
         run: ./gradlew clean
-#      - name: assemble debug
-#        run: ./gradlew assembleDebug
-#      - name: unit tests
-#        run: ./gradlew testDebugUnitTest
-#      - name: lint
-#        run: ./gradlew lintDebug
-#
-#  publish-library-01:
-#    needs: build
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up JDK 1.8
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 1.8
-#      - name: Grant execute permission for gradlew
-#        run: chmod +x gradlew
-#      - name: library 01 Bintray publish
-#        env:
-#          BINTRAY_USER: ${{secrets.BINTRAY_USER_TEST}}
-#          BINTRAY_KEY: ${{secrets.BINTRAY_KEY_TEST}}
-#          BINTRAY_ORG: ${{secrets.BINTRAY_ORG_TEST}}
-#        run: ./gradlew :library:bintrayUpload
-#
-#  publish-library-02:
-#    needs: build
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up JDK 1.8
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 1.8
-#      - name: Grant execute permission for gradlew
-#        run: chmod +x gradlew
-#      - name: library 02 Bintray publish
-#        env:
-#          BINTRAY_USER: ${{secrets.BINTRAY_USER_TEST}}
-#          BINTRAY_KEY: ${{secrets.BINTRAY_KEY_TEST}}
-#          BINTRAY_ORG: ${{secrets.BINTRAY_ORG_TEST}}
-#        run: ./gradlew :library-aaa:bintrayUpload
+      - name: assemble debug
+        run: ./gradlew assembleDebug
+      - name: unit tests
+        run: ./gradlew testDebugUnitTest
+      - name: lint
+        run: ./gradlew lintDebug
+
+  publish-library-01:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: library 01 Bintray publish
+        env:
+          BINTRAY_USER: ${{secrets.BINTRAY_USER_TEST}}
+          BINTRAY_KEY: ${{secrets.BINTRAY_KEY_TEST}}
+          BINTRAY_ORG: ${{secrets.BINTRAY_ORG_TEST}}
+        run: ./gradlew :library:bintrayUpload
+
+  publish-library-02:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: library 02 Bintray publish
+        env:
+          BINTRAY_USER: ${{secrets.BINTRAY_USER_TEST}}
+          BINTRAY_KEY: ${{secrets.BINTRAY_KEY_TEST}}
+          BINTRAY_ORG: ${{secrets.BINTRAY_ORG_TEST}}
+        run: ./gradlew :library-aaa:bintrayUpload
