--- a/.github/workflows/publish_mavencentral.yml
+++ b/.github/workflows/publish_mavencentral.yml
@@ -36,8 +36,8 @@ jobs:
       # Base64 decodes and pipes the GPG key content into the secret file
       - name: Prepare environment
         env:
-          GPG_KEY_CONTENTS: ${{ secrets.SIGNING_SECRET_KEY }}
-          SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_FILE }}
+          SIGNING_SECRET_KEY: ${{ secrets.SIGNING_SECRET_KEY }}
+          SIGNING_SECRET_FILE: ${{ secrets.SIGNING_SECRET_FILE }}
         run: |
           git fetch --unshallow
           sudo bash -c "echo 'SIGNING_SECRET_KEY' | base64 -d > 'SIGNING_SECRET_FILE'"
@@ -60,8 +60,8 @@ jobs:
       - name: Publish to MavenCentral
         run: ./gradlew :library:publishCesarMavenTestPublicationToMavencentralRepository --max-workers 1
         env:
-          OSSRH_USERNAME: ${{ secrets.MAVEN_USER }}
-          OSSRH_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          MAVEN_USER: ${{ secrets.MAVEN_USER }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
           SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
-          SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_FILE }}
+          SIGNING_SECRET_FILE: ${{ secrets.SIGNING_SECRET_FILE }}
