--- a/.github/workflows/publish_mavencentral.yml
+++ b/.github/workflows/publish_mavencentral.yml
@@ -40,7 +40,7 @@ jobs:
           SIGNING_SECRET_FILE: ${{ secrets.SIGNING_SECRET_FILE }}
         run: |
           git fetch --unshallow
-          sudo bash -c "echo 'SIGNING_SECRET_KEY' | base64 -d > 'SIGNING_SECRET_FILE'"
+          sudo bash -c "echo '$SIGNING_SECRET_KEY' | base64 -d > '$SIGNING_SECRET_FILE'"
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
