--- a/publishing.gradle
+++ b/publishing.gradle
@@ -20,7 +20,7 @@ ext["signing.keyId"] = getPropertyValue("SIGNING_KEY_ID")
 ext["signing.password"] = getPropertyValue("SIGNING_PASSWORD")
 ext["signing.secretKeyRingFile"] = getPropertyValue("SIGNING_SECRET_FILE")
 ext["mavenUser"] = getPropertyValue("MAVEN_USER")
-ext["mavenPassword"] = getPropertyValue("MAVEN_PASSWD")
+ext["mavenPassword"] = getPropertyValue("MAVEN_PASSWORD")
 
 publishing {
     publications {
