--- a/library-aaa/build.gradle
+++ b/library-aaa/build.gradle
@@ -13,7 +13,7 @@ android {
         minSdkVersion 29
         targetSdkVersion 30
         versionCode 1
-        versionName "0.0.4-internal"
+        versionName "0.0.5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -44,6 +44,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+ext {
+    PUBLISH_GROUP_ID = 'com.cesarvaliente.random_pair_names_generator'
+    PUBLISH_VERSION = android.defaultConfig.versionName
+    PUBLISH_ARTIFACT_ID = 'library_names_gen'
+}
+
+apply from: "${rootProject.projectDir}/publishing.gradle"
+
 
 // PUBLISHING CODE
 task sourceJar(type: Jar) {
