--- a/.github/workflows/publish_mavencentral.yml
+++ b/.github/workflows/publish_mavencentral.yml
@@ -50,7 +50,7 @@ jobs:
 
         # Builds the release artifacts of the library
       - name: Release build
-        run: ./gradlew :library::assembleRelease
+        run: ./gradlew :library:assembleRelease :library-aa:assembleRelease
 
         # Generates other artifacts (javadocJar is optional)
       - name: Source jar
@@ -58,7 +58,7 @@ jobs:
 
         # Runs upload, and then closes & releases the repository
       - name: Publish to MavenCentral
-        run: ./gradlew :library:publishCesarMavenTestPublicationToMavencentralRepository --max-workers 1
+        run: ./gradlew  publishCesarMavenTestPublicationToMavencentralRepository --max-workers 1
         env:
           MAVEN_USER: ${{ secrets.MAVEN_USER }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
