--- a/.github/workflows/publish_mavencentral.yml
+++ b/.github/workflows/publish_mavencentral.yml
@@ -17,7 +17,7 @@ on:
         required: false
 
 jobs:
-  publish library A:
+  publish-library-A:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -66,7 +66,7 @@ jobs:
           SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
           SIGNING_SECRET_FILE: ${{ secrets.SIGNING_SECRET_FILE }}
 
-  publish library B:
+  publish-library-B:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
