--- a/.github/workflows/publish_mavencentral_libA.yml
+++ b/.github/workflows/publish_mavencentral_libA.yml
@@ -7,7 +7,9 @@ name: publish-mavencentral
 # individually in Github Actions view.
 
 on:
-  pull_request:
+  push:
+    tags:
+      - 'testA*'
   workflow_dispatch:
     inputs:
       name:
@@ -66,51 +68,3 @@ jobs:
           SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
           SIGNING_SECRET_FILE: ${{ secrets.SIGNING_SECRET_FILE }}
 
-  publish-library-B:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-
-      # Base64 decodes and pipes the GPG key content into the secret file
-      - name: Prepare environment
-        env:
-          SIGNING_SECRET_KEY: ${{ secrets.SIGNING_SECRET_KEY }}
-          SIGNING_SECRET_FILE: ${{ secrets.SIGNING_SECRET_FILE }}
-        run: |
-          git fetch --unshallow
-          sudo bash -c "echo '$SIGNING_SECRET_KEY' | base64 -d > '$SIGNING_SECRET_FILE'"
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: clean
-        run: ./gradlew clean
-
-        # Builds the release artifacts of the library
-      - name: Release build
-        run: ./gradlew :library-aa:assembleRelease
-
-        # Generates other artifacts (javadocJar is optional)
-      - name: Source jar
-        run: ./gradlew androidSourcesJar
-
-        # Runs upload, and then closes & releases the repository
-      - name: Publish to MavenCentral
-        run: ./gradlew  :library-aaa:publishCesarMavenTestPublicationToMavencentralRepository --max-workers 1
-        env:
-          MAVEN_USER: ${{ secrets.MAVEN_USER }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
-          SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
-          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
-          SIGNING_SECRET_FILE: ${{ secrets.SIGNING_SECRET_FILE }}
