--- a/.github/workflows/publish_mavencentral_libA.yml
+++ b/.github/workflows/publish_mavencentral_libA.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: publish-mavencentral
+name: publish-libA-mavencentral
 # This workflow builds and publishes the different artifacts the project has..
 # Every library publication has its own job, so if one fails the other can run, and we can see them all
 # individually in Github Actions view.
