--- a/.github/workflows/publish_mavencentral_libA.yml
+++ b/.github/workflows/publish_mavencentral_libA.yml
@@ -1,13 +1,15 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: publish-mavencentral
+name: publish-libA-mavencentral
 # This workflow builds and publishes the different artifacts the project has..
 # Every library publication has its own job, so if one fails the other can run, and we can see them all
 # individually in Github Actions view.
 
 on:
-  pull_request:
+  push:
+    tags:
+      - 'testA*'
   workflow_dispatch:
     inputs:
       name:
@@ -17,7 +19,7 @@ on:
         required: false
 
 jobs:
-  publish:
+  publish-library-A:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -50,7 +52,7 @@ jobs:
 
         # Builds the release artifacts of the library
       - name: Release build
-        run: ./gradlew :library::assembleRelease
+        run: ./gradlew :library:assembleRelease
 
         # Generates other artifacts (javadocJar is optional)
       - name: Source jar
@@ -58,10 +60,11 @@ jobs:
 
         # Runs upload, and then closes & releases the repository
       - name: Publish to MavenCentral
-        run: ./gradlew :library:publishCesarMavenTestPublicationToMavencentralRepository --max-workers 1
+        run: ./gradlew  :library:publishCesarMavenTestPublicationToMavencentralRepository --max-workers 1
         env:
           MAVEN_USER: ${{ secrets.MAVEN_USER }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
           SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
           SIGNING_SECRET_FILE: ${{ secrets.SIGNING_SECRET_FILE }}
+
