--- a/.github/workflows/matrix_publishing.yml
+++ b/.github/workflows/matrix_publishing.yml
@@ -19,14 +19,14 @@ on:
         required: false
 
 jobs:
-  publish-library-A:
+  publish-matrix:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         projects: [
-          ":library:",
-          ":library-aa:"
+          "library:",
+          "library-aa:"
         ]
       fail-fast: false
 
@@ -57,19 +57,19 @@ jobs:
         run: chmod +x gradlew
 
       - name: clean
-        run: ./gradlew ${{matrix.projects}}clean
+        run: ./gradlew :${{matrix.projects}}clean
 
         # Builds the release artifacts of the library
       - name: Release build
-        run: ./gradlew ${{matrix.projects}}assembleRelease
+        run: ./gradlew :${{matrix.projects}}assembleRelease
 
         # Generates other artifacts (javadocJar is optional)
       - name: Source jar
-        run: ./gradlew ${{matrix.projects}}androidSourcesJar
+        run: ./gradlew :${{matrix.projects}}androidSourcesJar
 
         # Runs upload, and then closes & releases the repository
       - name: Publish to MavenCentral
-        run: ./gradlew  ${{matrix.projects}}publishCesarMavenTestPublicationToMavencentralRepository --max-workers 1
+        run: ./gradlew  :${{matrix.projects}}publishCesarMavenTestPublicationToMavencentralRepository --max-workers 1
         env:
           MAVEN_USER: ${{ secrets.MAVEN_USER }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
