--- a/.github/workflows/matrix_publishing.yml
+++ b/.github/workflows/matrix_publishing.yml
@@ -25,8 +25,8 @@ jobs:
     strategy:
       matrix:
         projects: [
-          "library:",
-          "library-aa:"
+            "library:",
+            "library-aaa:"
         ]
       fail-fast: false
 
