--- a/.github/workflows/publish_mavencentral_libB.yml
+++ b/.github/workflows/publish_mavencentral_libB.yml
@@ -45,15 +45,15 @@ jobs:
         run: chmod +x gradlew
 
       - name: clean
-        run: ./gradlew clean
+        run: ./gradlew :library-aaa:clean
 
         # Builds the release artifacts of the library
       - name: Release build
-        run: ./gradlew :library-aa:assembleRelease
+        run: ./gradlew :library-aaa:assembleRelease
 
         # Generates other artifacts (javadocJar is optional)
       - name: Source jar
-        run: ./gradlew androidSourcesJar
+        run: ./gradlew :library-aaa:androidSourcesJar
 
         # Runs upload, and then closes & releases the repository
       - name: Publish to MavenCentral
